Fixed the analysis inner col overflow. Made the inner cols abbreviated.

--- a/app/analysis/analysis.component.css
+++ b/app/analysis/analysis.component.css
@@ -1,3 +1,11 @@
+/*Keep the */
+.analysis th{
+    min-width: 4.6em;
+}
+.analysis td{
+    text-align: center;
+}
+
 .drp-contain {
     display: flex;
     display: -webkit-flex;
